--- a/style.css
+++ b/style.css
@@ -52,10 +52,12 @@ nav {
 
 nav a {
     cursor: pointer;
+    text-decoration: none;
 }
 
 nav a:hover {
     opacity: 0.7;
+    
 
 }
 
@@ -68,6 +70,7 @@ section,
 
 main {
     gap: 64px;
+    padding-bottom: 64px;
 }
 
 section {
@@ -160,7 +163,7 @@ margin-right: auto; */
 .ProjectContainer {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 32px;
 }
 
 .headerText {
@@ -173,6 +176,57 @@ margin-right: auto; */
     gap: 24px;
 }
 
+/* 
+selected a class then all divs 
+then the first child of the div 
+which is the p with the date (below) */
+
+.projectItem div:first-child {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+
+}
+
+.projectItem>div:last-child {
+    aspect-ratio: 16/9;
+    max-width: 30%;
+    overflow: hidden;
+    border-radius: 8px;
+}
+
+.projectItem>div:last-child img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.linkContainer {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  
+
+}
+
+.linkItem p {
+    font-size:0.9em;
+}
+
+/* (below) !impotrant used to style the flex direction */
+.linkItem {
+    display: flex;
+    flex-direction: row !important;
+    align-items: center;
+    gap: 14px !important;
+    color: var(--primary-color);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.linkItem:hover {
+    opacity: 0.7;
+}
 
 
 
