--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ body {
     color: var(--secondary-color);
 }
 
+.nounder{
+    text-decoration: none;
+}
+
 header, main, footer {
     max-width: 700px;
     margin: 0 auto;
