swapped color to blue

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color:#adf0d4;
-    --secondary-color: #1fd8a4;
-    --bg-color: #0d1512;
+    --primary-color:#bad6dc;
+    --secondary-color:#42d2fa;
+    --bg-color: hsl(244, 73%, 4%);
 }
 
 
